SERVER-25497 Fix sharded query path to handle shutdown of the mongos process