src/mongo/stdx/future.h
@@ -40,6 +40,7 @@ using ::std::future_status;  // NOLINT
 using ::std::launch;         // NOLINT
 using ::std::packaged_task;  // NOLINT
 using ::std::promise;        // NOLINT
+using ::std::shared_future;  // NOLINT
 
 }  // namespace stdx
 }  // namespace mongo
